test-03: add repo tests, feature: add parsecase
